Fixed text alignment

--- a/src/app/css/globals.scss
+++ b/src/app/css/globals.scss
@@ -120,10 +120,11 @@ footer {
   h1 {
     margin-bottom: 0;
     text-align: center;
+    padding: 4rem 1.5rem 0 1.5rem;
   }
   .artist-display {
     display: flex;
-      flex-direction: column-reverse;
+    flex-direction: column-reverse;
     div {
       flex: 1;
     }
